# lib-ledger-core

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AES256_8hpp_source.html  AESCipher_8hpp_source.html  AbstractAccountSynchronizer_8h_source.html  AbstractAccount_8hpp_source.html  AbstractAddress_8h_source.html  AbstractBlockParser_8h_source.html  AbstractBlockchainExplorerAccountSynchronizer_8h_source.html  AbstractBlockchainExplorer_8h_source.html  AbstractBlockchainObserver_8h_source.html  AbstractExtendedPublicKey_8h_source.html  AbstractLedgerApiBlockchainExplorer_8h_source.html  AbstractLedgerApiBlockchainObserver_8h_source.html  AbstractTransactionsBulkParser_8h_source.html  AbstractTransactionsParser_8h_source.html  AbstractWalletFactory_8hpp_source.html  AbstractWallet_8hpp_source.html  AbstractWebSocketNotificationParser_8h_source.html  AccountDatabaseHelper_8h_source.html  Amount_8h_source.html  ApiRippleLikeBlockchainExplorer_8h_source.html  BCHBech32_8h_source.html  BLAKE_8h_source.html  BTCBech32_8h_source.html  BalanceHistory_8hpp_source.html  Base58_8hpp_source.html  Bech32Factory_8h_source.html  Bech32Parameters_8h_source.html  Bech32_8h_source.html  Benchmarker_8h_source.html  BigIntImpl_8hpp_source.html  BigInt_8h_source.html  BitcoinLikeAccountDatabaseEntry_8h_source.html  (+7039 more)
core/lib/: CMakeLists.txt  ProjectSecp256k1.cmake
core/src/: CMakeLists.txt  ledger-core.cpp  ledger-core.h  libcore_export.h
core/test/: CMakeLists.txt  README.md
device/src/: CMakeLists.txt  IDevice.hpp  IDeviceFactory.hpp
ledger-core/: CMakeLists.txt  ledger-core-config.cmake
ledger-core-algorand/: CMakeLists.txt
ledger-core-algorand/idl/: callback.djinni  idl.djinni  ledger-core  mapcallback.djinni
ledger-core-algorand/src/: CMakeLists.txt
ledger-core-algorand/test/: AlgorandAccountTests.cpp  AlgorandAddressTests.cpp  AlgorandDatabaseTests.cpp  AlgorandExplorerTests.cpp  AlgorandSerializationTests.cpp  AlgorandSynchronizationTests.cpp  AlgorandTestFixtures.hpp  CMakeLists.txt  cmake  lib
ledger-core-bitcoin/: CMakeLists.txt
ledger-core-bitcoin/idl/: addresses.djinni  idl.djinni  script.djinni
ledger-core-bitcoin/src/: CMakeLists.txt
ledger-core-bitcoin/test/: AccountTests.cpp  AddressTests.cpp  CMakeLists.txt  CurrencyTests.cpp  DatabaseTests.cpp  ExplorerTests.cpp  KeychainTests.cpp  ScriptTests.cpp  SynchronizationTests.cpp  TransactionTests.cpp  WalletTests.cpp
ledger-core-cosmos/: CMakeLists.txt
ledger-core-cosmos/idl/: addresses.djinni  configuration.djinni  idl.djinni  messages.djinni  validators.djinni  wallet.djinni
ledger-core-cosmos/src/: CMakeLists.txt
ledger-core-cosmos/test/: AccountTests.cpp  AddressTests.cpp  CMakeLists.txt  DatabaseTests.cpp  Fixtures.cpp  Fixtures.hpp  ParsersTests.cpp  SynchronizationBenchmarks.cpp  SynchronizationTests.cpp  TransactionsTests.cpp
ledger-core-ethereum/: .gitignore  CMakeLists.txt  README.md  lib
ledger-core-ethereum/idl/: addresses.djinni  callback.djinni  erc20.djinni  idl.djinni
ledger-core-ethereum/src/: CMakeLists.txt
ledger-core-ethereum/test/: AccountTests.cpp  CMakeLists.txt  ExplorerTests.cpp  Fixtures.cpp  Fixtures.hpp  KeychainTests.cpp  SynchronizationTests.cpp  TransactionTests.cpp  WalletTests.cpp
ledger-core-ripple/: CMakeLists.txt  README.md
ledger-core-ripple/idl/: addresses.djinni  idl.djinni
ledger-core-ripple/inc/: RippleLikeAccount.hpp  RippleLikeAccountDatabaseHelper.hpp  RippleLikeAddress.h  RippleLikeAddress.hpp  RippleLikeBlock.h  RippleLikeBlock.hpp  RippleLikeExtendedPublicKey.h  RippleLikeExtendedPublicKey.hpp  RippleLikeOperation.h  RippleLikeOperation.hpp  RippleLikeTransaction.h  RippleLikeTransaction.hpp  RippleLikeTransactionDatabaseHelper.hpp  RippleLikeWallet.hpp  RippleNetworks.hpp
ledger-core-ripple/src/: CMakeLists.txt  RippleLikeAccount.cpp  RippleLikeAccount.h  RippleLikeAccountDatabaseHelper.cpp  RippleLikeAddress.cpp  RippleLikeAddress.h  RippleLikeBlock.cpp  RippleLikeCurrencies.cpp  RippleLikeExtendedPublicKey.cpp  RippleLikeExtendedPublicKey.h  RippleLikeOperation.bck  RippleLikeOperation.cpp  RippleLikeTransaction.bck  RippleLikeTransaction.cpp  RippleLikeTransactionDatabaseHelper.cpp  RippleLikeWallet.cpp  RippleLikeWallet.h  RippleNetworks.cpp  rippleNetworks.cpp  rippleNetworks.h
ledger-core-ripple/src2/: RippleLikeAccount.cpp  RippleLikeAccount.h  RippleLikeExtendedPublicKey.cpp  RippleLikeExtendedPublicKey.h  RippleLikeWallet.cpp  RippleLikeWallet.h
ledger-core-ripple/test/: AccountTests.cpp  AddressTest.cpp  CMakeLists.txt  Common.cpp  Common.hpp  Fixtures.cpp  Fixtures.hpp  RippleKeychainTest.cpp  SynchronizationTest.cpp  TransactionTest.cpp  TransactionTestHelper.hpp  lib
ledger-core-tezos/test/: AccountTests.cpp  AddressTest.cpp  CMakeLists.txt  Common.hpp  Fixtures.cpp  Fixtures.hpp  SynchronizationTests.cpp  TransactionTests.cpp  cmake  main.cpp
ledger-core/docs/: account-synchronization.md  coin-migration.md  pre-migration.md
ledger-core/idl/: account.djinni  address.djinni  amount.djinni  block.djinni  callback.djinni  configuration.djinni  core.djinni  core.yaml  crypto.djinni  currency.djinni  database.djinni  derivation.djinni  events.djinni  http_client.djinni  idl.djinni  logger.djinni  operation.djinni  path_resolver.djinni  preferences.djinni  secp256k1.djinni  services.djinni  thread_dispatcher.djinni  time_period.djinni  trust.djinni  trust_level.djinni  wallet.djinni  wallet_store.djinni  websocket_client.djinni
ledger-core/lib/: CMakeLists.txt  ethash  fmt  leveldb  spdlog
ledger-core/src/: CMakeLists.txt  libcore_export.h
ledger-core/test/: CMakeLists.txt
qt-host/: CMakeLists.txt
qt-host/async/: QtMainExecutionContext.cpp  QtMainExecutionContext.hpp  QtThreadDispatcher.cpp  QtThreadDispatcher.hpp  QtThreadPoolExecutionContext.cpp  QtThreadPoolExecutionContext.hpp  async_wait.h  wait.h
qt-host/net/: QtHttpClient.cpp  QtHttpClient.hpp  QtWebSocketClient.cpp  QtWebSocketClient.h
src/: CMakeLists.txt  Foo.cpp
src/math/: BigInt.cpp
(+6446 files in other folders)
